wall vs instrument